// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Date /> should render correctly 1`] = `
<Date__Container>
  <IconRounded
    color="#707070"
    size={18}
  >
    <Icon
      color="#fff"
      name="calendar"
      size={10}
    />
  </IconRounded>
  <span
    className="date"
    style={
      Object {
        "fontSize": undefined,
      }
    }
  >
    <FormattedDate
      day="numeric"
      hour="numeric"
      minute="numeric"
      month="long"
      value={"2030-03-09T23:00:00.000Z"}
      year="numeric"
    />
  </span>
</Date__Container>
`;

exports[`<Date /> should render correctly with other date 1`] = `
<Date__Container>
  <IconRounded
    color="#707070"
    size={18}
  >
    <Icon
      color="#fff"
      name="calendar"
      size={10}
    />
  </IconRounded>
  <span
    className="date"
    style={
      Object {
        "fontSize": undefined,
      }
    }
  >
    <FormattedDate
      day="numeric"
      hour="numeric"
      minute="numeric"
      month="long"
      value={"2032-06-14T22:00:00.000Z"}
      year="numeric"
    />
  </span>
</Date__Container>
`;
